# NeuralNet-Wrapper

./: CMakeLists.txt  README.md
neural_net/: CMakeLists.txt
neural_net/include/: activations.hpp  common.hpp  mnist_reader.hpp  neural_network.hpp
neural_net/include/layer/: CL.hpp  FC.hpp  FF.hpp  FL.hpp  IL.hpp  PL.hpp  SL.hpp  layer.hpp
neural_net/src/: mnist_reader.cpp  neural_network.cpp
neural_net/src/layer/: CL.cpp  FC.cpp  FF.cpp  FL.cpp  IL.cpp  PL.cpp  SL.cpp  layer.cpp
test/: CMakeLists.txt  image_conv.cpp  image_feedforward.cpp  image_load.cpp  image_pool.cpp  image_render.cpp  net_memcheck.cpp
test/shaders/: fs.glsl  vs.glsl
